force-app/main/default/objects/Play__c/Play__c.object-meta.xml
<CustomObject>
    <label>Play</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Play Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plays</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>