force-app/main/default/objects/Play__c/fields/Batter__c.field-meta.xml
<CustomField>
    <fullName>Batter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batter</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Plays (Batter)</relationshipLabel>
    <relationshipName>At_Bats</relationshipName>
    <type>Lookup</type>
</CustomField>