force-app/main/default/objects/Play__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
            <value>
                <fullName>Home Run</fullName>
            </value>
            <value>
                <fullName>Ground Out</fullName>
            </value>
            <value>
                <fullName>Fly Out</fullName>
            </value>
            <value>
                <fullName>On Error</fullName>
            </value>
            <value>
                <fullName>On Fielder&apos;s Choice</fullName>
            </value>
            <value>
                <fullName>On Dropped 3rd Strike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>