force-app/main/default/objects/Play__c/fields/Pitcher__c.field-meta.xml
<CustomField>
    <fullName>Pitcher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pitcher</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Pitches</relationshipLabel>
    <relationshipName>Pitches</relationshipName>
    <type>Lookup</type>
</CustomField>