force-app/main/default/objects/Play__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fly Ball</fullName>
            </value>
            <value>
                <fullName>Ground Ball</fullName>
            </value>
            <value>
                <fullName>Line Drive</fullName>
            </value>
            <value>
                <fullName>Bunt</fullName>
            </value>
            <value>
                <fullName>Batter Out</fullName>
            </value>
            <value>
                <fullName>Picked Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>